--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -41,25 +41,15 @@ K">{{ sds.eventsLabel }}</h1>
   <table mat-table [dataSource]="events" class="mat-elevation-z8" matSort matSortActive="created" matSortDisableClear
     matSortDirection="asc">
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let record"> {{record.Name}} </td>
+    <!-- Title Column -->
+    <ng-container matColumnDef="Title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
+      <td mat-cell *matCellDef="let record"> {{record.Title}} </td>
     </ng-container>
-    <!-- Breed Column -->
-    <ng-container matColumnDef="Breed">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Breed</th>
-      <td mat-cell *matCellDef="let record"> {{record.Breed}} </td>
-    </ng-container>
-    <!-- Birthdate Column -->
-    <ng-container matColumnDef="Birthdate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Birthdate</th>
-      <td mat-cell *matCellDef="let record"> {{record.Birthdate}} </td>
-    </ng-container>
-    <!-- Age Column -->
-    <ng-container matColumnDef="CurrentAge">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Age</th>
-      <td mat-cell *matCellDef="let record"> {{record.CurrentAge}} </td>
+    <!-- Schedule Column -->
+    <ng-container matColumnDef="Schedule">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Schedule</th>
+      <td mat-cell *matCellDef="let record"> {{record.Schedule}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
