--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -11,7 +11,7 @@
   </mat-form-field>
    -->
 
-   <table mat-table [dataSource]="events" class="mat-elevation-z8" matSort matSortActive="created" matSortDisableClear
+  <table mat-table [dataSource]="events" class="mat-elevation-z8" matSort matSortActive="created" matSortDisableClear
     matSortDirection="asc">
 
     <!-- Title Column -->
@@ -39,10 +39,16 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
       <td mat-cell *matCellDef="let record"> {{record.Schedule | date:'dd.MM.yyyy'}} </td>
     </ng-container>
+    <!-- Upcoming Column -->
+    <ng-container matColumnDef="Upcoming">
+      <th mat-header-cell *matHeaderCellDef>Upcoming</th>
+      <td mat-cell *matCellDef="let record"> {{record.Upcoming ? 'yes' : 'no'}} </td>
+      <!-- <td mat-cell *matCellDef="let record"> {{record.Upcoming}} </td> -->
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   </table>
-  <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+  <!-- <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator> -->
 </div>
