Add upcoming events toggle button

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -2,6 +2,7 @@
   <h1>{{ sds.eventsLabel }}</h1>
 
   <p>
+    <button class="mat-stroked-button" (click)="toggleUpcoming()">{{ toggleName }}</button>
     <button class="mat-stroked-button" (click)="refresh()">Refresh Events</button>
   </p>
 
