--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,3 +1,57 @@
 .container {
   margin-left: 30px;
 }
+
+.event {
+  border: 1px;
+  border-color: lightgray;
+  border-style: solid;
+  margin: 5px;
+  padding: 5px;
+  width: 90%;
+  min-width: 300px;
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* .event-head-row {
+} */
+
+.event-title {
+  font-weight: bold;
+}
+
+/* .event-speaker{
+} */
+
+.event-room {
+  float: right;
+}
+
+.room-ajax-room {
+  border-left-width: 3px;
+  border-left-color: rgb(0, 255, 0);
+  background: rgba(0, 255, 0, 0.1);
+  border-left-style: solid;
+}
+
+.room-basic-room {
+  border-left-width: 3px;
+  border-left-color: rgb(255, 255, 0);
+  background: rgba(255, 255, 0, 0.1);
+  border-left-style: solid;
+}
+
+.room-cobol-room {
+  border-left-width: 3px;
+  border-left-color: rgb(255, 0, 0);
+  background-color: rgba(255, 0, 0, 0.1);
+  border-left-style: solid;
+}
+
+.room-delphi-room {
+  border-left-width: 3px;
+  border-left-color: rgb(200, 0, 255);
+  background-color: rgba(200, 0, 255, 0.1);
+  border-left-style: solid;
+}
