Add function to calculate remaining time to next event

--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -28,6 +28,11 @@
   float: right;
 }
 
+.event-description {
+  color: rgb(120, 120, 120);
+  font-style: italic;
+}
+
 .room-ajax-room {
   border-left-width: 3px;
   border-left-color: rgb(0, 255, 0);
