--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p>{{ sds.eventsLabel }}</p>
+  <p>{{ sds.eventsLabel }} - {{ nextEventTimeOffset }}</p>
 
   <p>
     <button (click)="refresh()">Refresh Events</button>
@@ -11,15 +11,16 @@
     <ng-container *ngFor="let record of events">
       <div *ngIf="!onlyUpcoming || record.Upcoming" class="event {{record.cssClassRoom}}">
         <div class="event-head-row">
-          <span class="event-title">{{ record.Title }}</span>
+          <span> {{ record.Schedule | date:'EE., HH:mm' }}:</span>
+          <span class="event-title"> {{ record.Title }}</span>
           <span *ngIf="record.Speaker" class="event-speaker"> ({{ record.Speaker }})</span>
           <span class="event-room"> {{ record.Room }}</span>
         </div>
-        <div class="event-details-row">
-          <span>{{ record.Time}}</span>
-          <span> ({{ record.Schedule | date:'EE., yyyy-MM-dd, HH:mm' }})</span>
-          <span> ({{ record.Upcoming ? 'upcoming' : 'old' }})</span>
-        </div>
+        <!-- <div class="event-details-row"> -->
+          <!-- <span>{{ record.Time}}</span> -->
+          <!-- <span> ({{ record.Schedule | date:'EE., yyyy-MM-dd, HH:mm' }})</span> -->
+          <!-- <span> ({{ record.Upcoming ? 'upcoming' : 'old' }})</span> -->
+        <!-- </div> -->
         <div class="event-details-row" *ngIf="showDescriptions && record.Description">
           <div class="event-description">{{ record.Description }}</div>
         </div>
