Adapted string for remaining time.

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p>{{ sds.eventsLabel }} - {{ nextEventTimeOffset }}</p>
+  <p>{{ sds.eventsLabel }} - {{ nextEventTimeString }}</p>
 
   <p>
     <button (click)="refresh()">Refresh Events</button>
