--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -14,6 +14,84 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.toprow {
+  border: 1px;
+  border-color: lightgrey;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 15px;
+  width: 90%;
+  min-width: 300px;
+}
+
+.toprow-label {
+  display: inline;
+  padding: 3px;
+  margin: 5px;
+}
+
+.toprow-buttons {
+  display: inline;
+  padding: 3px;
+  margin: 5px;
+}
+
+.toprow-counter{
+  float: right;
+  min-width: 35ex;
+  text-align: right;
+  padding: 3px;
+  margin: 5px;
+}
+
+.countdown-10s-uneven {
+  border: 2px;
+  border-color: red;
+  border-style: solid;
+  background-color: rgba(255, 100, 100, 0.5);
+}
+
+.countdown-10s-even {
+  border: 2px;
+  border-color: red;
+  border-style: dashed;
+  background-color: rgba(255, 100, 100, 0.5);
+}
+
+.countdown-30s {
+  border: 2px;
+  border-color: white;
+  border-style: solid;
+  background-color: rgba(255, 155, 0, 0.7);
+}
+
+.countdown-1m {
+  border: 2px;
+  border-color: white;
+  border-style: solid;
+  background-color: rgba(255, 205, 0, 0.5);
+}
+
+.countdown-3m {
+  border: 2px;
+  border-color: white;
+  border-style: solid;
+  background-color: rgba(255, 255, 0, 0.3);
+}
+
+.countdown-5m {
+  border: 2px;
+  border-color: white;
+  border-style: solid;
+  background-color: rgba(100, 255, 100, 0.1);
+}
+
+.countdown-long {
+  border: 2px;
+  border-color: white;
+  border-style: solid;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 /* .event-head-row {
 } */
 
@@ -36,27 +114,27 @@
 .room-ajax-room {
   border-left-width: 3px;
   border-left-color: rgb(0, 255, 0);
-  background: rgba(0, 255, 0, 0.1);
   border-left-style: solid;
+  background: rgba(0, 255, 0, 0.1);
 }
 
 .room-basic-room {
   border-left-width: 3px;
   border-left-color: rgb(255, 255, 0);
-  background: rgba(255, 255, 0, 0.1);
   border-left-style: solid;
+  background: rgba(255, 255, 0, 0.1);
 }
 
 .room-cobol-room {
   border-left-width: 3px;
   border-left-color: rgb(255, 0, 0);
-  background-color: rgba(255, 0, 0, 0.1);
   border-left-style: solid;
+  background-color: rgba(255, 0, 0, 0.1);
 }
 
 .room-delphi-room {
   border-left-width: 3px;
   border-left-color: rgb(200, 0, 255);
-  background-color: rgba(200, 0, 255, 0.1);
   border-left-style: solid;
+  background-color: rgba(200, 0, 255, 0.1);
 }
