--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="toprow">
-    <div class="toprow-label">{{ sds.eventsLabel }} ({{ countdownCssClass }})</div>
+    <div class="toprow-label">{{ sds.eventsLabel }}</div>
     <div class="toprow-buttons">
       <button (click)="refresh()">Refresh Events</button>
       <button (click)="toggleUpcoming()">{{ toggleName }}</button>
