--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,93 +1,85 @@
 .container {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.event {
-  border: 1px;
-  border-color: lightgray;
-  border-style: solid;
-  margin: 5px;
-  padding: 5px;
-  width: 100%;
-  min-width: 300px !important;
-  background-color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-top: 0px;
 }
 
 .toprow {
   border: 1px;
   border-color: lightgrey;
   font-family: Arial, Helvetica, sans-serif;
-  margin-bottom: 15px;
-  width: 90%;
+  margin: 0px;
+  width: 100%;
   min-width: 300px;
 }
 
 .toprow-label {
-  display: inline;
+  display: inline-block;
   padding: 3px;
-  margin: 5px;
+  margin: 9px;
 }
 
 .toprow-buttons {
-  display: inline;
+  display: inline-block;
   padding: 3px;
-  margin: 5px;
+  margin: 9px;
 }
 
 .toprow-counter{
   float: right;
   min-width: 35ex;
   text-align: right;
+  font-size: larger;
   padding: 3px;
   margin: 5px;
+  vertical-align: top;
 }
 
 .countdown-10s-uneven {
-  border: 2px;
+  border: 4px;
   border-color: red;
   border-style: solid;
   background-color: rgba(255, 100, 100, 0.5);
 }
 
 .countdown-10s-even {
-  border: 2px;
+  border: 4px;
   border-color: red;
   border-style: dashed;
   background-color: rgba(255, 100, 100, 0.5);
 }
 
 .countdown-30s {
-  border: 2px;
+  border: 4px;
   border-color: white;
   border-style: solid;
   background-color: rgba(255, 155, 0, 0.7);
 }
 
 .countdown-1m {
-  border: 2px;
+  border: 4px;
   border-color: white;
   border-style: solid;
   background-color: rgba(255, 205, 0, 0.5);
 }
 
 .countdown-3m {
-  border: 2px;
+  border: 4px;
   border-color: white;
   border-style: solid;
   background-color: rgba(255, 255, 0, 0.3);
 }
 
 .countdown-5m {
-  border: 2px;
+  border: 4px;
   border-color: white;
   border-style: solid;
   background-color: rgba(100, 255, 100, 0.1);
 }
 
 .countdown-long {
-  border: 2px;
+  border: 4px;
   border-color: white;
   border-style: solid;
   background-color: rgba(255, 255, 255, 0.1);
@@ -98,6 +90,20 @@
 
 .events-list {
   font-size: xx-large;
+}
+
+.event {
+  border: 1px;
+  border-color: lightgray;
+  border-style: solid;
+  margin: 5px;
+  padding: 5px;
+  min-width: 300px !important;
+  font-family: Arial, Helvetica, sans-serif;
+  border-left-width: 5px;
+  border-left-color: lightgray;
+  border-left-style: solid;
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .event-title {
@@ -117,29 +123,38 @@
 }
 
 .room-ajax-room {
-  border-left-width: 3px;
+  border-left-width: 5px;
   border-left-color: rgb(0, 255, 0);
   border-left-style: solid;
   background: rgba(0, 255, 0, 0.1);
 }
 
 .room-basic-room {
-  border-left-width: 3px;
+  border-left-width: 5px;
   border-left-color: rgb(255, 255, 0);
   border-left-style: solid;
   background: rgba(255, 255, 0, 0.1);
 }
 
 .room-cobol-room {
-  border-left-width: 3px;
+  border-left-width: 5px;
   border-left-color: rgb(255, 0, 0);
   border-left-style: solid;
   background-color: rgba(255, 0, 0, 0.1);
 }
 
 .room-delphi-room {
-  border-left-width: 3px;
+  border-left-width: 5px;
   border-left-color: rgb(200, 0, 255);
   border-left-style: solid;
   background-color: rgba(200, 0, 255, 0.1);
 }
+
+.room-dining-hall,
+.room-espresso-room {
+  border-left-width: 5px;
+  border-left-color: rgb(205, 205, 205);
+  border-left-style: solid;
+  background: rgba(255, 255, 255, 0.1);
+}
+
