--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -2,9 +2,10 @@
   <div class="toprow">
     <div class="toprow-label">{{ sds.eventsLabel }}</div>
     <div class="toprow-buttons">
-      <button (click)="refresh()">Refresh Events</button>
-      <button (click)="toggleUpcoming()">{{ toggleName }}</button>
-      <button (click)="toggleDescriptions()">{{ toggleDescriptionsName }}</button>
+      <button mat-raised-button (click)="refresh()">Refresh Events</button>
+      <button mat-raised-button (click)="toggleUpcoming()">{{ toggleName }}</button>
+      <button mat-raised-button (click)="toggleDescriptions()">{{ toggleDescriptionsName }}</button>
+      <a href="/countdown" class="btn btn-primary" mat-raised-button >Countdown</a>
     </div>
     <div class="toprow-counter {{ countdownCssClass }}">{{ nextEventTimeString }}</div>
   </div>
