--- a/src/app/countdown-timer/countdown-timer.component.css
+++ b/src/app/countdown-timer/countdown-timer.component.css
@@ -4,6 +4,7 @@
   margin-right: 10px;
   padding-top: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
 }
 
 .toprow {
@@ -18,6 +19,10 @@
 .toprow-buttons {
   display: inline-block;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.counter {
+  height: 100%;
 }
 
 .countdown-10s-uneven {
