--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -5,7 +5,7 @@
       <button mat-raised-button (click)="refresh()">Refresh Events</button>
       <button mat-raised-button (click)="toggleUpcoming()">{{ toggleName }}</button>
       <button mat-raised-button (click)="toggleDescriptions()">{{ toggleDescriptionsName }}</button>
-      <a href="/countdown" class="btn btn-primary" mat-raised-button >Countdown</a>
+      <a routerLink="/countdown" class="btn btn-primary" mat-raised-button >Countdown</a>
     </div>
     <div class="toprow-counter {{ countdownCssClass }}">{{ nextEventTimeString }}</div>
   </div>
