--- a/src/app/countdown-timer/countdown-timer.component.css
+++ b/src/app/countdown-timer/countdown-timer.component.css
@@ -5,6 +5,7 @@
   padding-top: 10px;
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
+  color: white;
 }
 
 .toprow {
@@ -23,6 +24,9 @@
 
 .counter {
   height: 100%;
+  width: 90%;
+  min-width: 300px;
+  box-align: center;
 }
 
 .countdown-10s-uneven {
@@ -112,4 +116,12 @@
   text-align: center;
   vertical-align: middle;
   font-size: 120px;
+}
+
+.mat-raised-button {
+  background-color: black;
+  border-color: darkgray;
+  border-width: 1px;
+  border-style: solid;
+  color: white;
 }
