--- a/src/app/by-room/by-room.component.html
+++ b/src/app/by-room/by-room.component.html
@@ -5,29 +5,34 @@
       <button mat-raised-button (click)="refresh()">Refresh Events</button>
       <button mat-raised-button (click)="toggleUpcoming()">{{ toggleName }}</button>
       <button mat-raised-button (click)="toggleDescriptions()">{{ toggleDescriptionsName }}</button>
+      <a routerLink="/countdown" class="btn btn-primary" mat-raised-button >Countdown</a>
+      <a routerLink="/by-room" class="btn btn-primary" mat-raised-button >By Room</a>
     </div>
-    <div class="toprow-counter {{ countdownCssClass }}">{{ nextEventTimeString }}</div>
   </div>
 
-
   <div class="events-list">
-    <ng-container *ngFor="let record of events">
-      <div *ngIf="!onlyUpcoming || record.Upcoming" class="event {{record.cssClassRoom}}">
-        <div class="event-head-row">
-          <span> {{ record.Schedule | date:'EE., HH:mm' }}:</span>
-          <span class="event-title"> {{ record.Title }}</span>
-          <span *ngIf="record.Speaker" class="event-speaker"> ({{ record.Speaker }})</span>
-          <span class="event-room"> {{ record.Room }}</span>
+    <ng-container *ngFor="let room of eventRooms | orderBy: 'name' : false : true" >
+      <div class="eventRoom">
+        <div class="event-head-row">{{ room.name }}</div>
+        <ng-container *ngFor="let record of room.events">
+          <div *ngIf="!onlyUpcoming || record.Upcoming" class="event {{record.cssClassRoom}}">
+            <div class="event-head-row">
+              <span> {{ record.Schedule | date:'EE., HH:mm' }}:</span>
+              <span class="event-title"> {{ record.Title }}</span>
+              <span *ngIf="record.Speaker" class="event-speaker"> ({{ record.Speaker }})</span>
+              <!-- <span class="event-room"> {{ record.Room }}</span> -->
+            </div>
+            <!-- <div class="event-details-row"> -->
+              <!-- <span>{{ record.Time}}</span> -->
+              <!-- <span> ({{ record.Schedule | date:'EE., yyyy-MM-dd, HH:mm' }})</span> -->
+              <!-- <span> ({{ record.Upcoming ? 'upcoming' : 'old' }})</span> -->
+              <!-- </div> -->
+              <div class="event-details-row" *ngIf="showDescriptions && record.Description">
+                <div class="event-description">{{ record.Description }}</div>
+              </div>
+            </div>
+          </ng-container>
         </div>
-        <!-- <div class="event-details-row"> -->
-          <!-- <span>{{ record.Time}}</span> -->
-          <!-- <span> ({{ record.Schedule | date:'EE., yyyy-MM-dd, HH:mm' }})</span> -->
-          <!-- <span> ({{ record.Upcoming ? 'upcoming' : 'old' }})</span> -->
-        <!-- </div> -->
-        <div class="event-details-row" *ngIf="showDescriptions && record.Description">
-          <div class="event-description">{{ record.Description }}</div>
-        </div>
-      </div>
-    </ng-container>
+  </ng-container>
   </div>
 </div>
