--- a/src/app/by-room/by-room.component.css
+++ b/src/app/by-room/by-room.component.css
@@ -9,8 +9,8 @@ div.tr {
 
 div.td {
   display: table-cell;
-  border: thin solid red;
-  padding: 5px;
+  /* border: thin solid red; */
+  padding: 1px;
 }
 
 .container {
@@ -104,7 +104,7 @@ div.td {
 } */
 
 .events-list {
-  font-size: xx-large;
+  font-size: large;
 }
 
 .event {
@@ -119,6 +119,11 @@ div.td {
   border-left-color: lightgray;
   border-left-style: solid;
   background: rgba(255, 255, 255, 0.1);
+}
+
+.room-name {
+  font-size: large;
+  font-weight: bold;
 }
 
 .event-title {
