Initial integratin of angular-calendar.

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -7,6 +7,7 @@
       <button mat-raised-button (click)="toggleDescriptions()">{{ toggleDescriptionsName }}</button>
       <a routerLink="/countdown" class="btn btn-primary" mat-raised-button >Countdown</a>
       <a routerLink="/by-room" class="btn btn-primary" mat-raised-button >By Room</a>
+      <a routerLink="/schedule" class="btn btn-primary" mat-raised-button >Schedule</a>
     </div>
     <div class="toprow-counter {{ countdownCssClass }}">{{ nextEventTimeString }}</div>
   </div>
