Update arrays and hashmaps to be type safe.

--- a/src/app/schedule/template.html
+++ b/src/app/schedule/template.html
@@ -32,8 +32,8 @@
 </div>
 <br />
 
-<mwl-day-view-scheduler
+<app-day-view-scheduler
   [viewDate]="viewDate"
   [events]="events"
 >
-</mwl-day-view-scheduler>
+</app-day-view-scheduler>
