Change initial date to first conference day and add events in listChange initial date to first conference day and add events in list.

--- a/src/app/schedule/template.html
+++ b/src/app/schedule/template.html
@@ -12,9 +12,9 @@
       <div
         class="btn btn-outline-secondary"
         mwlCalendarToday
-        [(viewDate)]="viewDate"
+        [(viewDate)]="this.sds.nextEvent.Schedule"
       >
-        Today
+        Current
       </div>
       <div
         class="btn btn-primary"
