Update column widths and fix content display.

--- a/src/app/schedule/template.html
+++ b/src/app/schedule/template.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-6">
+    <div>Found {{ this.events.length }} Events in {{ this.roomCount }} rooms</div>
     <div class="btn-group">
       <div
         class="btn btn-primary"
