--- a/src/app/by-room/by-room.component.html
+++ b/src/app/by-room/by-room.component.html
@@ -17,7 +17,9 @@
           <div class="room-name">{{ room.name }}</div>
           <div class="events-list">
             <ng-container *ngFor="let record of room.events">
-              <div *ngIf="!onlyUpcoming || record.Upcoming" class="event {{record.cssClassRoom}}">
+              <div *ngIf="!onlyUpcoming || record.Upcoming" class="event room"
+                [style.border-left-color]="record.Room.colors.primary"
+                [style.background-color]="record.Room.colors.secondary">
                 <div class="event-head-row">
                   <span> {{ record.Schedule | date:'EE., HH:mm' }}:</span>
                   <span class="event-title"> {{ record.Title }}</span>
