--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,40 +1,26 @@
 <div class="row">
   <div class="col-md-6">
     <div class="btn-group">
-      <div
-        class="btn btn-primary"
-        mwlCalendarPreviousView
-        [view]="'day'"
-        [(viewDate)]="viewDate"
-      >
+      <div class="btn btn-primary" mwlCalendarPreviousView [view]="'day'" [(viewDate)]="viewDate">
         Previous
       </div>
-      <div
-        class="btn btn-outline-secondary"
-        mwlCalendarToday
-        [(viewDate)]="initialViewDate"
-      >
+      <div class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="initialViewDate">
         Current
       </div>
-      <div
-        class="btn btn-primary"
-        mwlCalendarNextView
-        [view]="'day'"
-        [(viewDate)]="viewDate"
-      >
+      <div class="btn btn-primary" mwlCalendarNextView [view]="'day'" [(viewDate)]="viewDate">
         Next
       </div>
-      <div>(Found {{ this.events.length }} events in {{ this.roomCount }} rooms)</div>
+      <div class="btn btn-outline-secondary" (click)="refresh()">
+        Refresh
+      </div>
+      <!-- <div>(Found {{ events.length }} events in {{ roomCount }} rooms)</div> -->
     </div>
   </div>
   <div class="col-md-6 text-right">
     <h3>{{ viewDate | calendarDate:('dayViewTitle') }}</h3>
   </div>
 </div>
-<br />
+<!-- <br /> -->
 
-<app-day-view-scheduler
-  [viewDate]="viewDate"
-  [events]="events"
->
+<app-day-view-scheduler [viewDate]="viewDate" [events]="events">
 </app-day-view-scheduler>
