Initially adding the selection dropdown.

--- a/src/app/countdown-timer/countdown-timer.component.html
+++ b/src/app/countdown-timer/countdown-timer.component.html
@@ -3,16 +3,25 @@
     <div class="toprow-buttons">
       <a routerLink="/" class="btn btn-primary" mat-raised-button>List</a>
       <button mat-raised-button class="md-raised md-cornered" (click)="refresh()">Refresh Events</button>
+      <mat-form-field>
+        <mat-select placeholder="Selected Room" [(ngModel)]="this.filterByRoom" name="roomFilter">
+          <mat-option [value]="">All Rooms</mat-option>
+          <mat-option *ngFor="let room of this.roomList" [style.background-color]="room.color.secondary"
+            [value]="room.name">
+            {{ room.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
   </div>
 
   <div class="counter">
-      <div class="central-counter {{ countdownCssClass }}">{{ nextEventTimeString }}</div>
-      <div *ngIf="nextEvent" class="event-details">
-        <div class="event-details">
-          <span class="event-time">{{ nextEvent.schedule | date:'HH:mm' }}:</span>
-          <span class="event-title"> {{ nextEvent.title }}</span>
-        </div>
+    <div class="central-counter {{ countdownCssClass }}">{{ nextEventTimeString }}</div>
+    <div *ngIf="nextEvent" class="event-details">
+      <div class="event-details">
+        <span class="event-time">{{ nextEvent.schedule | date:'HH:mm' }}:</span>
+        <span class="event-title"> {{ nextEvent.title }}</span>
       </div>
+    </div>
   </div>
 </div>
