--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-md-6">
     <div class="btn-group">
+      <a routerLink="/"><div class="btn btn-outline-secondary">
+        List
+      </div></a>
       <div class="btn btn-primary" mwlCalendarPreviousView [view]="'day'" [(viewDate)]="viewDate">
         Previous
       </div>
