Make filter available as subscrubable string and display current selection in countdown.

--- a/src/app/countdown-timer/countdown-timer.component.css
+++ b/src/app/countdown-timer/countdown-timer.component.css
@@ -23,11 +23,12 @@
   color: lightgrey;
 }
 
-mat-form-field, {
+.toprow-room {
+  display: inline-block;
   font-family: Arial, Helvetica, sans-serif;
-  border: 1px;
-  border-color: lightgrey;
   color: lightgrey;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .counter {
