--- a/src/app/countdown-timer/countdown-timer.component.html
+++ b/src/app/countdown-timer/countdown-timer.component.html
@@ -3,16 +3,9 @@
     <div class="toprow-buttons">
       <a routerLink="/" class="btn btn-primary" mat-raised-button>List</a>
       <button mat-raised-button class="md-raised md-cornered" (click)="refresh()">Refresh Events</button>
-      <mat-form-field>
-        <mat-select placeholder="Selected Room" name="roomFilter"
-          (selectionChange)="this.updateFilter($event.value)">
-          <mat-option [value]="">All Rooms</mat-option>
-          <mat-option *ngFor="let room of this.roomList" [style.background-color]="room.color.secondary"
-            [value]="room.name">
-            {{ room.name }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <div class="toprow-room">
+        Upcoming in {{ this.filterstring }}
+      </div>
     </div>
   </div>
 
