--- a/src/app/schedule/day-view-scheduler.component.html
+++ b/src/app/schedule/day-view-scheduler.component.html
@@ -1,14 +1,11 @@
 <div class="cal-week-view" role="grid">
   <div class="day-view-column-headers">
-    <div class="day-view-column-header" *ngFor="let user of view?.users">
+    <div class="day-view-column-header" [style.width]="eventWidthPx" *ngFor="let user of view?.users">
       {{ user.name }}
     </div>
   </div>
   <div
     class="cal-time-events"
-    mwlDroppable
-    (dragEnter)="dragEnter('time')"
-    (dragLeave)="dragLeave('time')"
   >
     <div class="cal-time-label-column" *ngIf="view.hourColumns.length > 0">
       <div
@@ -45,9 +42,6 @@
           *ngFor="let timeEvent of column.events; trackBy: trackByWeekTimeEvent"
           #event
           class="cal-event-container"
-          [class.cal-draggable]="
-            timeEvent.event.draggable && timeEventResizes.size === 0
-          "
           [class.cal-starts-within-day]="!timeEvent.startsBeforeDay"
           [class.cal-ends-within-day]="!timeEvent.endsAfterDay"
           [ngClass]="timeEvent.event.cssClass"
@@ -56,35 +50,6 @@
           [style.height.px]="timeEvent.height"
           [style.left.px]="timeEvent.left"
           [style.width.px]="timeEvent.width"
-          mwlResizable
-          [resizeSnapGrid]="{
-            left: dayColumnWidth,
-            right: dayColumnWidth,
-            top: eventSnapSize || hourSegmentHeight,
-            bottom: eventSnapSize || hourSegmentHeight
-          }"
-          [validateResize]="validateResize"
-          [allowNegativeResizes]="true"
-          (resizeStart)="timeEventResizeStarted(dayColumns, timeEvent, $event)"
-          (resizing)="timeEventResizing(timeEvent, $event)"
-          (resizeEnd)="timeEventResizeEnded(timeEvent)"
-          mwlDraggable
-          dragActiveClass="cal-drag-active"
-          [dropData]="{ event: timeEvent.event, calendarId: calendarId }"
-          [dragAxis]="{
-            x: timeEvent.event.draggable && timeEventResizes.size === 0,
-            y: timeEvent.event.draggable && timeEventResizes.size === 0
-          }"
-          [dragSnapGrid]="
-            snapDraggedEvents
-              ? { x: eventWidth, y: eventSnapSize || hourSegmentHeight }
-              : {}
-          "
-          [ghostDragEnabled]="!snapDraggedEvents"
-          [validateDrag]="validateDrag"
-          (dragStart)="dragStarted(dayColumns, event, timeEvent)"
-          (dragging)="dragMove(timeEvent, $event)"
-          (dragEnd)="dragEnded(timeEvent, $event, dayColumnWidth, true)"
         >
           <div
             class="cal-resize-handle cal-resize-handle-before-start"
@@ -92,11 +57,6 @@
               timeEvent.event?.resizable?.beforeStart &&
               !timeEvent.startsBeforeDay
             "
-            mwlResizeHandle
-            [resizeEdges]="{
-              left: true,
-              top: true
-            }"
           ></div>
           <mwl-calendar-week-view-event
             [locale]="locale"
@@ -119,15 +79,9 @@
           >
           </mwl-calendar-week-view-event>
           <div
-            class="cal-resize-handle cal-resize-handle-after-end"
             *ngIf="
               timeEvent.event?.resizable?.afterEnd && !timeEvent.endsAfterDay
             "
-            mwlResizeHandle
-            [resizeEdges]="{
-              right: true,
-              bottom: true
-            }"
           ></div>
         </div>
 
@@ -143,19 +97,6 @@
             [segmentHeight]="hourSegmentHeight"
             [locale]="locale"
             [customTemplate]="hourSegmentTemplate"
-            (mwlClick)="
-              hourSegmentClicked.emit({
-                date: segment.date,
-                sourceEvent: $event
-              })
-            "
-            [clickListenerDisabled]="hourSegmentClicked.observers.length === 0"
-            mwlDroppable
-            [dragOverClass]="
-              !dragActive || !snapDraggedEvents ? 'cal-drag-over' : null
-            "
-            dragActiveClass="cal-drag-active"
-            (drop)="eventDropped($event, segment.date, false)"
           >
           </mwl-calendar-week-view-hour-segment>
         </div>
