--- a/src/app/schedule/day-view-scheduler.component.html
+++ b/src/app/schedule/day-view-scheduler.component.html
@@ -65,8 +65,8 @@
                 : (daysInWeek === 1 ? 'dayTooltip' : 'weekTooltip')
                 : weekEvent.event)
             : ''
-        " [tooltipPlacement]="tooltipPlacement" [tooltipEvent]="weekEvent.event" [tooltipTemplate]="tooltipTemplate"
-    [tooltipAppendToBody]="tooltipAppendToBody" [tooltipDelay]="tooltipDelay"
+        " [tooltipPlacement]="tooltipPlacement" [tooltipEvent]="weekEvent.event"
+    [tooltipTemplate]="customTooltipTemplate" [tooltipAppendToBody]="tooltipAppendToBody" [tooltipDelay]="tooltipDelay"
     (mwlClick)="eventClicked.emit({ sourceEvent: $event })"
     (mwlKeydownEnter)="eventClicked.emit({ sourceEvent: $event })" tabindex="0" role="application" [attr.aria-label]="
           { event: weekEvent.event, locale: locale }
@@ -77,5 +77,11 @@
     </mwl-calendar-event-title>
     <!-- Speaker: {{weekEvent.event?.meta?.speaker}} -->
     <!-- Description: {{weekEvent.event?.meta?.description}} -->
+  </div>
+</ng-template>
+<ng-template #customTooltipTemplate let-contents="contents" let-placement="placement" let-event="event">
+  <div class="cal-tooltip" [ngClass]="'cal-tooltip-' + placement">
+    <div class="cal-tooltip-arrow"></div>
+    <div class="cal-tooltip-inner" [innerHtml]="contents"></div>
   </div>
 </ng-template>
