Update with a pipe to display (description) texts cropped at a useful place.

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -39,7 +39,7 @@
         <!-- <span> ({{ record.Upcoming ? 'upcoming' : 'old' }})</span> -->
         <!-- </div> -->
         <div class="event-details-row" *ngIf="showDescriptions && record.description">
-          <div class="event-description">{{ record.description }}</div>
+          <div class="event-description">{{ record.description | cropText:40 }}</div>
         </div>
       </div>
     </ng-container>
