--- a/src/app/schedule/day-view-scheduler.component.html
+++ b/src/app/schedule/day-view-scheduler.component.html
@@ -75,13 +75,11 @@
     <mwl-calendar-event-title [event]="weekEvent.event" [customTemplate]="eventTitleTemplate"
       [view]="daysInWeek === 1 ? 'day' : 'week'">
     </mwl-calendar-event-title>
-    <!-- Speaker: {{weekEvent.event?.meta?.speaker}} -->
-    <!-- Description: {{weekEvent.event?.meta?.description}} -->
   </div>
 </ng-template>
-<ng-template #customTooltipTemplate let-contents="contents" let-placement="placement" let-event="event">
+<ng-template #customTooltipTemplate let-placement="placement" let-event="event">
   <div class="cal-tooltip" [ngClass]="'cal-tooltip-' + placement">
     <div class="cal-tooltip-arrow"></div>
-    <div class="cal-tooltip-inner" [innerHtml]="contents"></div>
+    <div class="cal-tooltip-inner" [innerHtml]="getTooltipText(event)"></div>
   </div>
 </ng-template>
