--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -6,8 +6,8 @@
 }
 
 .toprow {
-  border: 1px;
-  border-color: lightgrey;
+  /* border: 1px;
+  border-color: lightgrey; */
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   width: 100%;
@@ -18,22 +18,25 @@
   display: inline-block;
   padding: 3px;
   margin: 9px;
+  color: whitesmoke;
 }
 
 .toprow-buttons {
   display: inline-block;
-  padding: 3px;
-  margin: 9px;
+  /* padding: 3px;
+  margin: 9px; */
 }
 
-.toprow-counter{
+.toprow-counter {
   float: right;
   min-width: 35ex;
   text-align: right;
   font-size: larger;
   padding: 3px;
   margin: 5px;
-  vertical-align: top;
+  /* vertical-align: top; */
+  display: block;
+  background-color: dimgray;
 }
 
 .countdown-10s-uneven {
@@ -41,6 +44,7 @@
   border-color: red;
   border-style: solid;
   background-color: rgba(255, 100, 100, 0.5);
+  color: black;
 }
 
 .countdown-10s-even {
@@ -48,6 +52,7 @@
   border-color: red;
   border-style: dashed;
   background-color: rgba(255, 100, 100, 0.5);
+  color: black;
 }
 
 .countdown-30s {
@@ -55,6 +60,7 @@
   border-color: white;
   border-style: solid;
   background-color: rgba(255, 155, 0, 0.7);
+  color: black;
 }
 
 .countdown-1m {
@@ -62,6 +68,7 @@
   border-color: white;
   border-style: solid;
   background-color: rgba(255, 205, 0, 0.5);
+  color: black;
 }
 
 .countdown-3m {
@@ -69,6 +76,7 @@
   border-color: white;
   border-style: solid;
   background-color: rgba(255, 255, 0, 0.3);
+  color: black;
 }
 
 .countdown-5m {
@@ -76,13 +84,15 @@
   border-color: white;
   border-style: solid;
   background-color: rgba(100, 255, 100, 0.1);
+  color: black;
 }
 
 .countdown-long {
   border: 4px;
-  border-color: white;
+  border-color: dimgray;
   border-style: solid;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: dimgray;
+  color: whitesmoke;
 }
 
 /* .event-head-row {
@@ -98,6 +108,7 @@
   border-style: solid;
   margin: 5px;
   padding: 5px;
+  /* padding: 32px; */
   min-width: 300px !important;
   font-family: Arial, Helvetica, sans-serif;
   border-left-width: 5px;
@@ -115,13 +126,42 @@
 
 .event-room {
   float: right;
+  /* display: block;
+  text-align: right; */
 }
 
 .event-description {
-  color: rgb(120, 120, 120);
+  /* color: rgb(120, 120, 120);
+  font-style: italic; */
+  color: #787878;
   font-style: italic;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: smaller;
 }
+
+
 .room {
   border-left-width: 5px;
   border-left-style: solid;
+}
+
+.mat-button-base {
+  background-color: whitesmoke;
+}
+
+button, .mat-mini-fab, .mat-raised-button {
+    color: rgba(230,230,230,.87);
+    background-color: #848484;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-wrapper {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.mat-form-field {
+  padding-left: 9px;
+  padding-right: 9px;
 }
